--- a/prepros.config
+++ b/prepros.config
@@ -118,6 +118,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -127,6 +128,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -165,6 +167,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -174,6 +177,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -209,6 +213,7 @@
       },
       "dart-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "sourceMap": false
@@ -296,6 +301,7 @@
           "properties": true,
           "pure_funcs": [],
           "pure_getters": false,
+          "reduce_funcs": true,
           "reduce_vars": true,
           "sequences": true,
           "side_effects": true,
@@ -341,6 +347,7 @@
       },
       "node-sass": {
         "indentType": "space",
+        "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
         "outputStyle": "expanded",
@@ -942,6 +949,30 @@
         }
       },
       {
+        "file": "#source/ads.kit",
+        "config": {
+          "customOutput": "ads.html"
+        }
+      },
+      {
+        "file": "#source/booking.kit",
+        "config": {
+          "customOutput": "booking.html"
+        }
+      },
+      {
+        "file": "#source/bookingOwner.kit",
+        "config": {
+          "customOutput": "bookingOwner.html"
+        }
+      },
+      {
+        "file": "#source/catalog.kit",
+        "config": {
+          "customOutput": "catalog.html"
+        }
+      },
+      {
         "file": "#source/contakti.kit",
         "config": {
           "customOutput": "contakti.html"
@@ -957,6 +988,12 @@
         "file": "#source/index.kit",
         "config": {
           "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "#source/information.kit",
+        "config": {
+          "customOutput": "information.html"
         }
       },
       {
@@ -1016,6 +1053,24 @@
         }
       },
       {
+        "file": "#source/mywant.kit",
+        "config": {
+          "customOutput": "mywant.html"
+        }
+      },
+      {
+        "file": "#source/nothing.kit",
+        "config": {
+          "customOutput": "nothing.html"
+        }
+      },
+      {
+        "file": "#source/notifications.kit",
+        "config": {
+          "customOutput": "notifications.html"
+        }
+      },
+      {
         "file": "#source/novosti.kit",
         "config": {
           "customOutput": "novosti.html"
@@ -1031,6 +1086,12 @@
         "file": "#source/price.kit",
         "config": {
           "customOutput": "price.html"
+        }
+      },
+      {
+        "file": "#source/registration.kit",
+        "config": {
+          "customOutput": "registration.html"
         }
       },
       {
